--- a/frontend/frontend-deployment.yaml
+++ b/frontend/frontend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: netflix-frontend
-        image: shacharavraham/netflix-images-frontend:latest
+        image: shacharavraham/netflix-images-frontend:v1.0.9
         ports:
         - containerPort: 3000
         env:
