--- a/backend/moviecatalog-deployment.yaml
+++ b/backend/moviecatalog-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: netflix-movie-catalog
-        image: shacharavraham/netflix-images-api:latest
+        image: shacharavraham/netflix-images-api:v1.0.1
         ports:
         - containerPort: 8080
 ---
